scss/components/_entity_browser.scss
.entity-browser-form {

  background-color: #ffffff;

  .views-row {
    margin-right: 1.333%;
    width: 32%;
  }

  .views-exposed-form {
    .form-item {
      display: inline-block;

      input {
        &[type='text'] {
          display: block;
          margin-bottom: 6px;
          border: 1px solid #8e929c;
          background-color: #ffffff;
          cursor: auto;
          padding: 16px;
          width: 100%;
          line-height: 1.15;
          color: #222330;
          font-size: 16px;
          box-sizing: border-box;
        }
      }
    }

    .form-actions {
      display: inline-block;
    }
  }

  .form-actions {
    clear: both;
    padding: 0.5rem;
  }
}

